--- a/src/components/ContactBlock.astro
+++ b/src/components/ContactBlock.astro
@@ -66,7 +66,7 @@ const hours = [
             <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
               <path d="M24 12C24 5.373 18.627 0 12 0S0 5.373 0 12c0 5.989 4.388 10.954 10.125 11.854v-8.385H7.078V12h3.047V9.356c0-3.007 1.792-4.668 4.533-4.668 1.312 0 2.686.234 2.686.234v2.953h-1.513c-1.491 0-1.956.925-1.956 1.875V12h3.328l-.532 3.469h-2.796v8.385C19.612 22.954 24 17.989 24 12z"/>
             </svg>
-            Odwiedź nas na Facebooku
+            Odwiedź nasz Facebooku
           </a>
         </div>
       </div>
